src/main/java/com/zwk/parser/BeadParser.java
/* BeadParser.java */
/* Generated By:JavaCC: Do not edit this line. BeadParser.java */
package com.zwk.parser;

import com.zwk.node.*;

public class BeadParser implements BeadParserConstants {

  final public Node root() throws ParseException {RootNode rootNode = new RootNode();
    Node v ;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAR:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAR:{
        v = var();
rootNode.inits.add(v);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        if (jj_2_1(2)) {
          v = assign();
rootNode.inits.add(v);
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IDENTIFIER:{
            v = funcCall();
rootNode.inits.add(v);
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
{if ("" != null) return rootNode;}
    throw new Error("Missing return statement in function");
}

  final public Node imports() throws ParseException {
    jj_consume_token(IMPORT);
    jj_consume_token(IDENTIFIER);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DOT:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(DOT);
      jj_consume_token(IDENTIFIER);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AS:{
      jj_consume_token(AS);
      jj_consume_token(IDENTIFIER);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}

  final public Node var() throws ParseException {VarNode varNode = new VarNode();
    Token t;
    Node v;
    jj_consume_token(VAR);
    t = jj_consume_token(IDENTIFIER);
varNode.name = t.image;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      v = value();
varNode.value = v;
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
{if ("" != null) return varNode;}
    throw new Error("Missing return statement in function");
}

  final public Node assign() throws ParseException {AssignNode assignNode = new AssignNode();
    Token t ;
    Token operator;
    Node v;
    t = jj_consume_token(IDENTIFIER);
assignNode.name = t.image;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      operator = jj_consume_token(ASSIGN);
      break;
      }
    case PLUSASSIGN:{
      operator = jj_consume_token(PLUSASSIGN);
      break;
      }
    case MINUSASSIGN:{
      operator = jj_consume_token(MINUSASSIGN);
      break;
      }
    case STARASSIGN:{
      operator = jj_consume_token(STARASSIGN);
      break;
      }
    case SLASHASSIGN:{
      operator = jj_consume_token(SLASHASSIGN);
      break;
      }
    case ANDASSIGN:{
      operator = jj_consume_token(ANDASSIGN);
      break;
      }
    case ORASSIGN:{
      operator = jj_consume_token(ORASSIGN);
      break;
      }
    case XORASSIGN:{
      operator = jj_consume_token(XORASSIGN);
      break;
      }
    case REMASSIGN:{
      operator = jj_consume_token(REMASSIGN);
      break;
      }
    case LSHIFTASSIGN:{
      operator = jj_consume_token(LSHIFTASSIGN);
      break;
      }
    case RSHIFTASSIGN:{
      operator = jj_consume_token(RSHIFTASSIGN);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
assignNode.operator = operator.image;
    v = value();
assignNode.value =v;
{if ("" != null) return assignNode;}
    throw new Error("Missing return statement in function");
}

  final public Node attributeAssign() throws ParseException {
    attribute();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      break;
      }
    case PLUSASSIGN:{
      jj_consume_token(PLUSASSIGN);
      break;
      }
    case MINUSASSIGN:{
      jj_consume_token(MINUSASSIGN);
      break;
      }
    case STARASSIGN:{
      jj_consume_token(STARASSIGN);
      break;
      }
    case SLASHASSIGN:{
      jj_consume_token(SLASHASSIGN);
      break;
      }
    case ANDASSIGN:{
      jj_consume_token(ANDASSIGN);
      break;
      }
    case ORASSIGN:{
      jj_consume_token(ORASSIGN);
      break;
      }
    case XORASSIGN:{
      jj_consume_token(XORASSIGN);
      break;
      }
    case REMASSIGN:{
      jj_consume_token(REMASSIGN);
      break;
      }
    case LSHIFTASSIGN:{
      jj_consume_token(LSHIFTASSIGN);
      break;
      }
    case RSHIFTASSIGN:{
      jj_consume_token(RSHIFTASSIGN);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    value();
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}

  final public Node func() throws ParseException {
    jj_consume_token(FUNC);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        jj_consume_token(IDENTIFIER);
      }
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BREAK:
      case CONTINUE:
      case FOR:
      case IF:
      case RETURN:
      case VAR:
      case FUNC:
      case DEFER:
      case IDENTIFIER:
      case LBRACE:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      statement();
    }
    jj_consume_token(RBRACE);
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}

  final public Node value() throws ParseException {Node ret;
    Token t;
    if (jj_2_2(2)) {
      t = jj_consume_token(IDENTIFIER);
IdNode idNode = new IdNode();idNode.id = t.image;ret = idNode;
    } else if (jj_2_3(2)) {
      ret = literalValue();
    } else if (jj_2_4(2)) {
      ret = logicValue();
    } else if (jj_2_5(2)) {
      ret = arithmeticValue();
    } else if (jj_2_6(2)) {
      ret = ifValue();
    } else if (jj_2_7(2)) {
      ret = anonymousFunc();
    } else if (jj_2_8(2)) {
      ret = funcCall();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FUNC:{
        ret = anonymousFuncCall();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        if (jj_2_9(2)) {
          ret = lambda();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LBRACKET:{
            ret = array();
            break;
            }
          case LBRACE:{
            ret = map();
            break;
            }
          default:
            jj_la1[12] = jj_gen;
            if (jj_2_10(2)) {
              ret = attribute();
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
{if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
}

  final public Node array() throws ParseException {
    jj_consume_token(LBRACKET);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FALSE:
    case TRUE:
    case FUNC:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case LBRACE:
    case LBRACKET:{
      value();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        value();
      }
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(RBRACKET);
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}

  final public Node map() throws ParseException {
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      jj_consume_token(COLON);
      value();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(COLON);
        value();
      }
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}

  final public Node attribute() throws ParseException {
    jj_consume_token(IDENTIFIER);
    label_7:
    while (true) {
      attributeValue();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACKET:
      case DOT:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_7;
      }
    }
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}

  final public Node attributeValue() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DOT:{
      jj_consume_token(DOT);
      jj_consume_token(IDENTIFIER);
      break;
      }
    case LBRACKET:{
      jj_consume_token(LBRACKET);
      if (jj_2_11(2)) {
        jj_consume_token(IDENTIFIER);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case STRING_LITERAL:{
          jj_consume_token(STRING_LITERAL);
          break;
          }
        case INTEGER_LITERAL:{
          jj_consume_token(INTEGER_LITERAL);
          break;
          }
        case IDENTIFIER:{
          attribute();
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RBRACKET);
{if ("" != null) return null;}
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Node literalValue() throws ParseException {Node ret;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:{
      t = jj_consume_token(TRUE);
BooleanLiteralValueNode valueNode = new BooleanLiteralValueNode();valueNode.value = true;ret = valueNode; {if ("" != null) return ret;}
      break;
      }
    case FALSE:{
      t = jj_consume_token(FALSE);
BooleanLiteralValueNode valueNode = new BooleanLiteralValueNode();valueNode.value = false;ret = valueNode; {if ("" != null) return ret;}
      break;
      }
    case FLOATING_POINT_LITERAL:{
      t = jj_consume_token(FLOATING_POINT_LITERAL);
FloatLiteralValueNode valueNode = new FloatLiteralValueNode();valueNode.value= Double.parseDouble(t.image);ret = valueNode; {if ("" != null) return ret;}
      break;
      }
    case INTEGER_LITERAL:{
      t = jj_consume_token(INTEGER_LITERAL);
IntegerLiteralValueNode valueNode = new IntegerLiteralValueNode();valueNode.value = valueNode.parseInt(t.image);ret = valueNode; {if ("" != null) return ret;}
      break;
      }
    case STRING_LITERAL:{
      t = jj_consume_token(STRING_LITERAL);
StringLiteralValueNode valueNode = new StringLiteralValueNode();valueNode.value = valueNode.parseString(t.image);ret = valueNode; {if ("" != null) return ret;}
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Node logicValue() throws ParseException {
    priorityLogicValue();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case SC_OR:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SC_OR:{
        jj_consume_token(SC_OR);
        break;
        }
      case OR:{
        jj_consume_token(OR);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      priorityLogicValue();
    }
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}

  final public Node priorityLogicValue() throws ParseException {
    priorityBaseLogicValue();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:
      case SC_AND:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SC_AND:{
        jj_consume_token(SC_AND);
        break;
        }
      case AND:{
        jj_consume_token(AND);
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      priorityBaseLogicValue();
    }
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}

  final public Node priorityBaseLogicValue() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FALSE:
    case TRUE:
    case FUNC:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
    case LPAREN:{
      comparisonValue();
      break;
      }
    case LBRACE:{
      jj_consume_token(LBRACE);
      logicValue();
      jj_consume_token(RBRACE);
{if ("" != null) return null;}
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Node comparisonValue() throws ParseException {
    comparisonExpression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GE:{
      jj_consume_token(GE);
      break;
      }
    case GT:{
      jj_consume_token(GT);
      break;
      }
    case LE:{
      jj_consume_token(LE);
      break;
      }
    case LT:{
      jj_consume_token(LT);
      break;
      }
    case EQ:{
      jj_consume_token(EQ);
      break;
      }
    case NE:{
      jj_consume_token(NE);
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    comparisonExpression();
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}

  final public Node comparisonExpression() throws ParseException {
    if (jj_2_12(2)) {
      jj_consume_token(IDENTIFIER);
    } else if (jj_2_13(2)) {
      literalValue();
    } else if (jj_2_14(2)) {
      arithmeticValue();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        funcCall();
        break;
        }
      case FUNC:{
        anonymousFuncCall();
{if ("" != null) return null;}
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  final public Node calcExpression() throws ParseException {
    if (jj_2_15(2)) {
      jj_consume_token(IDENTIFIER);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FALSE:
      case TRUE:
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case STRING_LITERAL:{
        literalValue();
        break;
        }
      case IDENTIFIER:{
        funcCall();
        break;
        }
      case FUNC:{
        anonymousFuncCall();
{if ("" != null) return null;}
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  final public Node arithmeticValue() throws ParseException {
    priorityArithmeticValue();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      priorityArithmeticValue();
    }
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}

  final public Node priorityArithmeticValue() throws ParseException {
    priorityBaseArithmeticValue();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STAR:
      case SLASH:
      case BIT_AND:
      case BIT_OR:
      case XOR:
      case REM:
      case LSHIFT:
      case RSHIFT:{
        ;
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STAR:{
        jj_consume_token(STAR);
        break;
        }
      case SLASH:{
        jj_consume_token(SLASH);
        break;
        }
      case REM:{
        jj_consume_token(REM);
        break;
        }
      case BIT_AND:{
        jj_consume_token(BIT_AND);
        break;
        }
      case BIT_OR:{
        jj_consume_token(BIT_OR);
        break;
        }
      case XOR:{
        jj_consume_token(XOR);
        break;
        }
      case LSHIFT:{
        jj_consume_token(LSHIFT);
        break;
        }
      case RSHIFT:{
        jj_consume_token(RSHIFT);
        break;
        }
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      priorityBaseArithmeticValue();
    }
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
}
